PythonParser.py
# Generated from PythonParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonParser ( Parser ):

    grammarFileName = "PythonParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'for'", "'in'", "'range'", "'if'", "'else'", 
                     "'elif'", "'while'", "'def'", "'return'", "'and'", 
                     "'or'", "'not'", "<INVALID>", "':'", "';'", "'+'", 
                     "'-'", "'*'", "'**'", "'/'", "','", "<INVALID>", "<INVALID>", 
                     "'>'", "'<'", "'=='", "'>='", "'<='", "'!='", "'\\n'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "FOR", "IN", "RANGE", "IF", "ELSE", "ELIF", 
                      "WHILE", "DEF", "RETURN", "AND", "OR", "NOT", "ASSIGN", 
                      "COLON", "SEMI", "ADD", "SUB", "MULT", "POW", "DIV", 
                      "COMMA", "BOOLOP", "RELATION", "GREATER", "LOWER", 
                      "EQUAL", "GREATER_EQUAL", "LOWER_EQUAL", "NEQ", "LB", 
                      "OB", "CB", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "INDENT", "BOOL", "INT", "FLOAT", "REAL", "COMPLEX", 
                      "ID", "STRING", "WS", "COMMENT" ]

    RULE_code = 0
    RULE_stat = 1
    RULE_conditional = 2
    RULE_loop_for = 3
    RULE_loop_while = 4
    RULE_if_elif_else = 5
    RULE_func = 6
    RULE_func_call = 7
    RULE_expr = 8
    RULE_query = 9

    ruleNames =  [ "code", "stat", "conditional", "loop_for", "loop_while", 
                   "if_elif_else", "func", "func_call", "expr", "query" ]

    EOF = Token.EOF
    FOR=1
    IN=2
    RANGE=3
    IF=4
    ELSE=5
    ELIF=6
    WHILE=7
    DEF=8
    RETURN=9
    AND=10
    OR=11
    NOT=12
    ASSIGN=13
    COLON=14
    SEMI=15
    ADD=16
    SUB=17
    MULT=18
    POW=19
    DIV=20
    COMMA=21
    BOOLOP=22
    RELATION=23
    GREATER=24
    LOWER=25
    EQUAL=26
    GREATER_EQUAL=27
    LOWER_EQUAL=28
    NEQ=29
    LB=30
    OB=31
    CB=32
    LBRACE=33
    RBRACE=34
    LBRACK=35
    RBRACK=36
    INDENT=37
    BOOL=38
    INT=39
    FLOAT=40
    REAL=41
    COMPLEX=42
    ID=43
    STRING=44
    WS=45
    COMMENT=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatContext,i)


        def conditional(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.ConditionalContext)
            else:
                return self.getTypedRuleContext(PythonParser.ConditionalContext,i)


        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.FuncContext)
            else:
                return self.getTypedRuleContext(PythonParser.FuncContext,i)


        def func_call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.Func_callContext)
            else:
                return self.getTypedRuleContext(PythonParser.Func_callContext,i)


        def loop_while(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.Loop_whileContext)
            else:
                return self.getTypedRuleContext(PythonParser.Loop_whileContext,i)


        def loop_for(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.Loop_forContext)
            else:
                return self.getTypedRuleContext(PythonParser.Loop_forContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_code

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCode" ):
                return visitor.visitCode(self)
            else:
                return visitor.visitChildren(self)




    def code(self):

        localctx = PythonParser.CodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_code)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 15121506112402) != 0):
                self.state = 26
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 20
                    self.stat()
                    pass

                elif la_ == 2:
                    self.state = 21
                    self.conditional()
                    pass

                elif la_ == 3:
                    self.state = 22
                    self.func()
                    pass

                elif la_ == 4:
                    self.state = 23
                    self.func_call()
                    pass

                elif la_ == 5:
                    self.state = 24
                    self.loop_while()
                    pass

                elif la_ == 6:
                    self.state = 25
                    self.loop_for()
                    pass


                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 31
            self.match(PythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(PythonParser.RETURN, 0)

        def query(self):
            return self.getTypedRuleContext(PythonParser.QueryContext,0)


        def LB(self):
            return self.getToken(PythonParser.LB, 0)

        def ID(self):
            return self.getToken(PythonParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(PythonParser.ASSIGN, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = PythonParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 48
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.match(PythonParser.RETURN)
                self.state = 34
                self.query(0)
                self.state = 36
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 35
                    self.match(PythonParser.LB)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                self.query(0)
                self.state = 40
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 39
                    self.match(PythonParser.LB)


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 42
                self.match(PythonParser.ID)
                self.state = 43
                self.match(PythonParser.ASSIGN)
                self.state = 44
                self.query(0)
                self.state = 45
                self.match(PythonParser.LB)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.match(PythonParser.LB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_elif_else(self):
            return self.getTypedRuleContext(PythonParser.If_elif_elseContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_conditional

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditional" ):
                return visitor.visitConditional(self)
            else:
                return visitor.visitChildren(self)




    def conditional(self):

        localctx = PythonParser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_conditional)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.if_elif_else()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Loop_forContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(PythonParser.FOR, 0)

        def ID(self):
            return self.getToken(PythonParser.ID, 0)

        def IN(self):
            return self.getToken(PythonParser.IN, 0)

        def RANGE(self):
            return self.getToken(PythonParser.RANGE, 0)

        def OB(self):
            return self.getToken(PythonParser.OB, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonParser.ExprContext,i)


        def CB(self):
            return self.getToken(PythonParser.CB, 0)

        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def LB(self):
            return self.getToken(PythonParser.LB, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.COMMA)
            else:
                return self.getToken(PythonParser.COMMA, i)

        def INDENT(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.INDENT)
            else:
                return self.getToken(PythonParser.INDENT, i)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_loop_for

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop_for" ):
                return visitor.visitLoop_for(self)
            else:
                return visitor.visitChildren(self)




    def loop_for(self):

        localctx = PythonParser.Loop_forContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_loop_for)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(PythonParser.FOR)
            self.state = 53
            self.match(PythonParser.ID)
            self.state = 54
            self.match(PythonParser.IN)
            self.state = 55
            self.match(PythonParser.RANGE)
            self.state = 56
            self.match(PythonParser.OB)
            self.state = 57
            self.expr(0)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 58
                self.match(PythonParser.COMMA)
                self.state = 59
                self.expr(0)
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 60
                    self.match(PythonParser.COMMA)
                    self.state = 61
                    self.expr(0)




            self.state = 66
            self.match(PythonParser.CB)
            self.state = 67
            self.match(PythonParser.COLON)
            self.state = 68
            self.match(PythonParser.LB)
            self.state = 71 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 69
                self.match(PythonParser.INDENT)
                self.state = 70
                self.stat()
                self.state = 73 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==37):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Loop_whileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(PythonParser.WHILE, 0)

        def query(self):
            return self.getTypedRuleContext(PythonParser.QueryContext,0)


        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def LB(self):
            return self.getToken(PythonParser.LB, 0)

        def OB(self):
            return self.getToken(PythonParser.OB, 0)

        def CB(self):
            return self.getToken(PythonParser.CB, 0)

        def INDENT(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.INDENT)
            else:
                return self.getToken(PythonParser.INDENT, i)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_loop_while

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop_while" ):
                return visitor.visitLoop_while(self)
            else:
                return visitor.visitChildren(self)




    def loop_while(self):

        localctx = PythonParser.Loop_whileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_loop_while)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(PythonParser.WHILE)
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 76
                self.match(PythonParser.OB)


            self.state = 79
            self.query(0)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 80
                self.match(PythonParser.CB)


            self.state = 83
            self.match(PythonParser.COLON)
            self.state = 84
            self.match(PythonParser.LB)
            self.state = 87 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 85
                self.match(PythonParser.INDENT)
                self.state = 86
                self.stat()
                self.state = 89 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==37):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_elif_elseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PythonParser.IF, 0)

        def query(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.QueryContext)
            else:
                return self.getTypedRuleContext(PythonParser.QueryContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.COLON)
            else:
                return self.getToken(PythonParser.COLON, i)

        def LB(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.LB)
            else:
                return self.getToken(PythonParser.LB, i)

        def OB(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.OB)
            else:
                return self.getToken(PythonParser.OB, i)

        def CB(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.CB)
            else:
                return self.getToken(PythonParser.CB, i)

        def INDENT(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.INDENT)
            else:
                return self.getToken(PythonParser.INDENT, i)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatContext,i)


        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.ELIF)
            else:
                return self.getToken(PythonParser.ELIF, i)

        def ELSE(self):
            return self.getToken(PythonParser.ELSE, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_if_elif_else

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_elif_else" ):
                return visitor.visitIf_elif_else(self)
            else:
                return visitor.visitChildren(self)




    def if_elif_else(self):

        localctx = PythonParser.If_elif_elseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_if_elif_else)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(PythonParser.IF)
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 92
                self.match(PythonParser.OB)


            self.state = 95
            self.query(0)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 96
                self.match(PythonParser.CB)


            self.state = 99
            self.match(PythonParser.COLON)
            self.state = 100
            self.match(PythonParser.LB)
            self.state = 103 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 101
                self.match(PythonParser.INDENT)
                self.state = 102
                self.stat()
                self.state = 105 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==37):
                    break

            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 107
                self.match(PythonParser.ELIF)
                self.state = 109
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                if la_ == 1:
                    self.state = 108
                    self.match(PythonParser.OB)


                self.state = 111
                self.query(0)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==32:
                    self.state = 112
                    self.match(PythonParser.CB)


                self.state = 115
                self.match(PythonParser.COLON)
                self.state = 116
                self.match(PythonParser.LB)
                self.state = 119 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 117
                    self.match(PythonParser.INDENT)
                    self.state = 118
                    self.stat()
                    self.state = 121 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==37):
                        break

                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 128
                self.match(PythonParser.ELSE)
                self.state = 129
                self.match(PythonParser.COLON)
                self.state = 130
                self.match(PythonParser.LB)
                self.state = 133 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 131
                    self.match(PythonParser.INDENT)
                    self.state = 132
                    self.stat()
                    self.state = 135 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==37):
                        break



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(PythonParser.DEF, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.ID)
            else:
                return self.getToken(PythonParser.ID, i)

        def OB(self):
            return self.getToken(PythonParser.OB, 0)

        def CB(self):
            return self.getToken(PythonParser.CB, 0)

        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def RETURN(self):
            return self.getToken(PythonParser.RETURN, 0)

        def query(self):
            return self.getTypedRuleContext(PythonParser.QueryContext,0)


        def LB(self):
            return self.getToken(PythonParser.LB, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.COMMA)
            else:
                return self.getToken(PythonParser.COMMA, i)

        def INDENT(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.INDENT)
            else:
                return self.getToken(PythonParser.INDENT, i)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_func

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc" ):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)




    def func(self):

        localctx = PythonParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(PythonParser.DEF)
            self.state = 140
            self.match(PythonParser.ID)
            self.state = 141
            self.match(PythonParser.OB)
            self.state = 142
            self.match(PythonParser.ID)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 143
                self.match(PythonParser.COMMA)
                self.state = 144
                self.match(PythonParser.ID)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self.match(PythonParser.CB)
            self.state = 151
            self.match(PythonParser.COLON)
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.state = 152
                self.match(PythonParser.RETURN)
                self.state = 153
                self.query(0)
                pass
            elif token in [30]:
                self.state = 154
                self.match(PythonParser.LB)
                self.state = 157 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 155
                    self.match(PythonParser.INDENT)
                    self.state = 156
                    self.stat()
                    self.state = 159 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==37):
                        break

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonParser.ID, 0)

        def OB(self):
            return self.getToken(PythonParser.OB, 0)

        def query(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.QueryContext)
            else:
                return self.getTypedRuleContext(PythonParser.QueryContext,i)


        def CB(self):
            return self.getToken(PythonParser.CB, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.COMMA)
            else:
                return self.getToken(PythonParser.COMMA, i)

        def getRuleIndex(self):
            return PythonParser.RULE_func_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_call" ):
                return visitor.visitFunc_call(self)
            else:
                return visitor.visitChildren(self)




    def func_call(self):

        localctx = PythonParser.Func_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_func_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(PythonParser.ID)
            self.state = 164
            self.match(PythonParser.OB)
            self.state = 165
            self.query(0)
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 166
                self.match(PythonParser.COMMA)
                self.state = 167
                self.query(0)
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 173
            self.match(PythonParser.CB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonParser.ID, 0)

        def INT(self):
            return self.getToken(PythonParser.INT, 0)

        def FLOAT(self):
            return self.getToken(PythonParser.FLOAT, 0)

        def COMPLEX(self):
            return self.getToken(PythonParser.COMPLEX, 0)

        def OB(self):
            return self.getToken(PythonParser.OB, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonParser.ExprContext,i)


        def CB(self):
            return self.getToken(PythonParser.CB, 0)

        def func_call(self):
            return self.getTypedRuleContext(PythonParser.Func_callContext,0)


        def ADD(self):
            return self.getToken(PythonParser.ADD, 0)

        def SUB(self):
            return self.getToken(PythonParser.SUB, 0)

        def MULT(self):
            return self.getToken(PythonParser.MULT, 0)

        def DIV(self):
            return self.getToken(PythonParser.DIV, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PythonParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,24,self._ctx)
            if la_ == 1:
                self.state = 176
                self.match(PythonParser.ID)
                pass

            elif la_ == 2:
                self.state = 177
                self.match(PythonParser.INT)
                pass

            elif la_ == 3:
                self.state = 178
                self.match(PythonParser.FLOAT)
                pass

            elif la_ == 4:
                self.state = 179
                self.match(PythonParser.COMPLEX)
                pass

            elif la_ == 5:
                self.state = 180
                self.match(PythonParser.OB)
                self.state = 181
                self.expr(0)
                self.state = 182
                self.match(PythonParser.CB)
                pass

            elif la_ == 6:
                self.state = 184
                self.func_call()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 192
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,25,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PythonParser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 187
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 188
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1507328) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 189
                    self.expr(4) 
                self.state = 194
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,25,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def BOOL(self):
            return self.getToken(PythonParser.BOOL, 0)

        def NOT(self):
            return self.getToken(PythonParser.NOT, 0)

        def query(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.QueryContext)
            else:
                return self.getTypedRuleContext(PythonParser.QueryContext,i)


        def OB(self):
            return self.getToken(PythonParser.OB, 0)

        def CB(self):
            return self.getToken(PythonParser.CB, 0)

        def BOOLOP(self):
            return self.getToken(PythonParser.BOOLOP, 0)

        def RELATION(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.RELATION)
            else:
                return self.getToken(PythonParser.RELATION, i)

        def getRuleIndex(self):
            return PythonParser.RULE_query

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)



    def query(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PythonParser.QueryContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_query, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 204
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,26,self._ctx)
            if la_ == 1:
                self.state = 196
                self.expr(0)
                pass

            elif la_ == 2:
                self.state = 197
                self.match(PythonParser.BOOL)
                pass

            elif la_ == 3:
                self.state = 198
                self.match(PythonParser.NOT)
                self.state = 199
                self.query(3)
                pass

            elif la_ == 4:
                self.state = 200
                self.match(PythonParser.OB)
                self.state = 201
                self.query(0)
                self.state = 202
                self.match(PythonParser.CB)
                pass

